# novel_aggregator_db

./: .env  .gitignore  README.md  TERMS.md  ci.yml  kakaopage_product.txt  kakaopage_scraping.py  kakaopage_scrolling.py  keyword_extraction.py  munpia_scraping.py  naver_series_scraping.py  novelpia_scraping.py  pyproject.toml
docs/: QA.md  api_contract.md  architecture.md  selenium_evidence.md
docs/evidence_docs/: 01_newman.txt
scr/core/: config.py
scr/data/: database.py
scraping/kakaopage/: kakaopage_DB.py  kakaopage_scraping.py  kakaopage_scrolling.py
scripts/: docker-compose.yml  mongo_init.js  schema_and_seed.sql  test.sql
security/: setting.py  test_setting.py
src/core/: config.py  errors.py  retry.py
src/data/: database.py  models.py  mongo.py  repository.py
src/pipeline/: normalize.py  orchestrator.py  schemas.py
test_개발용/integration/: test_KP_scraper.py  test_sched_trig.py
test_개발용/postman/: run_newman.sh
test_개발용/unit/: test_NS_parsers.py
test_임시/integration/: test_KP_scraper.py  test_sched_trig.py
test_임시/unit/: test_KP_parsers.py  test_orchestrator.py
tests/data/: kp_top10_expected.json  test_data_quality.py
tests/e2e/: test_KP_scraper_smoke.py  test_NS_scraper_smoke.py  test_jobs_api_e2e.py  test_scheduler_interval_e2e.py
tests/integration/: test_KP_scraper.py  test_NS_scraper.py  test_jobs_integration.py  test_orchestrator.py  test_repository.py  test_repository_upsert.py  test_sched_interval.py  test_sched_trig.py
tests/postman/: novel-aggregator.postman_collection.json  run_newman.sh
tests/reports/: newman-results.xml  (+2 more)
(+41 files in other folders)
