[project]
name = "novel-aggregator-db"
version = "0.1.0"
description = "selenium 웹스크래핑 -> 소설 메타데이터 MySQL/MongoDB 저장 -> API 감싸기 -> 스케쥴러"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "SQLAlchemy>=2.0.30",
  "pymysql>=1.1.0",
  "pymongo>=4.8.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.0",
  "APScheduler>=3.10.4",
  "selenium>=4.23.1",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "typing-extensions>=4.12.2"
]