[project]
name = "novel-aggregator-db"
version = "0.1.0"
description = "웹소설 플랫폼의 작품 메타데이터를 수집 → 정규화 → 저장 → API 제공"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "SQLAlchemy>=2.0.30",
    "pymysql>=1.1.0",
    "cryptography>=46.0.1",
    "pymongo>=4.8.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.0",
    "APScheduler>=3.10.4",
    "selenium>=4.23.1",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "typing-extensions>=4.12.2",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]